feat: :sparkles: add update system using a custom json file

--- a/config/config.yml
+++ b/config/config.yml
@@ -45,3 +45,6 @@ TorrentClients:
     DisplayName: "Home"
     Username: "admin"
     Password: "Contraseña1234"
+
+# No modificar esta línea (se usa para actualizar la configuración)
+Version: 1.0.1
