feat: :sparkles: add support to bulk downloans and rate-limit detector

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 	"dependencies": {
 		"@inquirer/prompts": "^5.3.8",
 		"@robertklep/qbittorrent": "^1.0.1",
+		"ora": "^8.1.0",
 		"yaml": "^2.5.1"
 	}
 }
